--- a/index.css
+++ b/index.css
@@ -1,37 +1,74 @@
 /*======= Font rengini #3C373B yapan bir yeni bir universal selector yaratın*/
+* {
+  color: #3C373B;
+}
 
+body {
+  margin: 0;
+  padding: 0;
+}
 
 h1 {
   font-family: 'Gaegu', cursive;
   margin: 20px 0;
   /*=======  Font size'ı 60px yapın ve text'i ortalayın(center) */
-  font-size: 10px;
+  text-align: center;
+  font-size: 60px;
 }
 
-h2, h3, h4, h5, h6 {
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Gaegu', cursive;
   margin-bottom: 0;
-  padding: 0 10px;
+  padding: 0 5px;
   /*=======  Font size'ı 30px yapın*/
-  font-size: 10px;
+  font-size: 30px;
 }
 
-/*======= Sayfadaki TÜM p tag'leri için aşağıdaki özellikleri içeren bir selector yaratın:
+/*======= Sayfadaki TÜM p tag'leri için aşağıdaki özellikleri içeren bir selector yaratın:*/
+.hero {
+  width: 100%;
+  background: #e7e7e7;
+  padding: 1% 0;
+}
 
-font-size: 16px;
-font-family: roboto;
-padding: 10px;
-line-height: 1.4;
+p {
 
-*/
-
+  font-size: 16px;
+  font-family: roboto;
+  padding: 5px;
+  line-height: 1.4;
+}
 
 /*======= Sayfadaki TÜM imajlar için aşağıdaki özellikleri içeren bir selector yaratın:
 
   border-radius: 10px;
 
 */
-
+img{
+border-radius: 10px;
+width: 100%;
+padding-top: 0.2%;
+}
+.özellikler{
+  padding-top: 0.2%;
+}
+.özellikler img{
+  display: inline-block;
+  width: 35%;
+}
+.özellikler div div{
+  display: inline-block;
+  width: 50%;
+  margin-left: 5%;
+}
+.left{
+  margin-left: 0 !important;
+  margin-right: 5%;
+}
 .content-row {
   display: flex;
 }
@@ -43,6 +80,11 @@ line-height: 1.4;
 .container {
   /*======= width property yaratın. Değerini 605px olarak atayın */
   margin: 0 auto;
+  width: 750px;
+}
+
+header nav {
+  text-align: center;
 }
 
 .container header nav a {
@@ -54,12 +96,15 @@ line-height: 1.4;
   color: white;
   text-decoration: none;
   margin-bottom: 20px;
-   /*======= background property yaratın. Değerini #E79947 olarak atayınız.*/
-  
+  /*======= background property yaratın. Değerini #E79947 olarak atayınız.*/
+  background: #E79947;
 }
 
 .container header nav a:hover {
-/*======= background property yaratın ve değeri white olsun.  Sonra, color property yaratın ve değerini yapın. */
+  /*======= background property yaratın ve değeri white olsun.  Sonra, color property yaratın ve değerini yapın. */
+  background: white;
+  color: #e79947;
+  ;
 }
 
 /*======= Hakkmızda bölümü için aşağıdaki stilleri içeren bir selector yaratın:
@@ -67,13 +112,23 @@ line-height: 1.4;
 */
 
 .contact-section {
-  border-top: 1px dashed black;
-  padding: 20px 0;
+  border-top: 1px black;
+  padding: 10px 0;
+  line-height: 2;
+  border-radius: 10px;
 }
 
 .contact-section h2 {
   padding: 0;
-  margin: 0 0 10px 0;
+  margin: 0 0 5px 0;
+  border-radius: 5px;
+}
+.contact-section p{
+  padding: 0;
+  font-style: normal;
+  font-size: 16px;
+  margin: 2px;
+
 }
 
 /*======= contact-section class'da address tag'i için aşağdıaki stilleri içeren bir selector yaratın:
@@ -84,17 +139,21 @@ footer {
   width: 100%;
   background: #E79947;
   border-top: 1px dashed white;
+  border-radius: 10px;
 }
 
-footer .footer-content { 
-  margin: 0 auto; 
+footer .footer-content {
+  margin: 0 auto;
+  width: 750px;
+  border-radius: 10px;
   /*======= width property yaratın. Değerini 605px olarak atayın */
-  
+
 }
 
 footer .footer-content h3 {
   padding: 0;
   margin: 20px 0;
+  border-radius: 10px;
 }
 
 footer nav {
@@ -118,5 +177,12 @@ footer nav a:first-child {
 
 footer .footer-content .copyright {
   padding: 20px 0;
-   /*======= metni ortalayacak kodu yazın */
+  text-align: center;
+  border-radius: 10px;
+  /*======= metni ortalayacak kodu yazın */
+}
+footer nav a{
+  margin: 10px;
+  color: black;
+  text-decoration: underline;
 }
